--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,118 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-350.1KB/s(Youtube:不良林), server: 212.81.47.18, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-345.9KB/s(Youtube:不良林), server: 212.81.47.14, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-386.2KB/s(Youtube:不良林), server: 212.81.47.17, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.09MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-709.7KB/s(Youtube:不良林), server: AZHJ001.xiba1.xyz, port: 20721, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZHJ001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 匈牙利-1.96MB/s(Youtube:不良林), server: 185.225.69.134, port: 45081, type: vmess, uuid: 3c3bfd75-dc30-4e76-8940-47e1137e21f9, alterId: 64, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-3.27MB/s(Youtube:不良林), server: jgwdb3.gaox.ml, port: 443, type: trojan, password: 8d2d5953-d649-4034-94f2-72f2df2623da, sni: jgwdb3.gaox.ml, skip-cert-verify: true}
   - {name: 🇨🇳 中国-8.42MB/s(Youtube:不良林), server: cmb.3sx.xyz, port: 21005, type: ss, cipher: chacha20-ietf-poly1305, password: d80412a5-1757-48a5-b493-e2de1265cc11}
-  - {name: 🇨🇳 中国-7.17MB/s(Youtube:不良林), server: cmb.3sx.xyz, port: 11001, type: ss, cipher: chacha20-ietf-poly1305, password: d80412a5-1757-48a5-b493-e2de1265cc11}
-  - {name: 🇺🇸 美国-3.29MB/s(Youtube:不良林), server: 97.64.28.52, port: 254, type: ss, cipher: aes-256-cfb, password: bwhskrskr03}
+  - {name: 🇸🇬 新加坡-3.61MB/s(Youtube:不良林), server: 13.250.126.43, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
+  - {name: 🇭🇰 香港-496.0KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 6004, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇩🇪 德国-1.04MB/s(Youtube:不良林), server: 165.22.73.126, port: 23335, type: ss, cipher: aes-256-cfb, password: 7d99ae502227454ea998d71e4b62a388}
+  - {name: 🇺🇸 美国-408.0KB/s(Youtube:不良林), server: au2-4.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-4.nigirocloud.com, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-425.8KB/s(Youtube:不良林), server: 212.81.47.16, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇨🇳 台湾-2.14MB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1c08f35bdafe74a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
+  - {name: 🇨🇳 台湾-1.39MB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
+  - {name: 🇭🇰 香港-710.7KB/s(Youtube:不良林), server: zq-vip-05.com, port: 443, type: trojan, password: 7TFhMMPRFjkEe9Bl, sni: zq-vip-05.com, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.98MB/s(Youtube:不良林), server: vus2.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vus2.0bad.com}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-350.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-345.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-386.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.09MB/s(Youtube:不良林)
-      - 🇭🇰 香港-709.7KB/s(Youtube:不良林)
-      - 匈牙利-1.96MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.27MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.42MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.29MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.61MB/s(Youtube:不良林)
+      - 🇭🇰 香港-496.0KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-408.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-425.8KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.14MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.39MB/s(Youtube:不良林)
+      - 🇭🇰 香港-710.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.98MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-350.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-345.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-386.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.09MB/s(Youtube:不良林)
-      - 🇭🇰 香港-709.7KB/s(Youtube:不良林)
-      - 匈牙利-1.96MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.27MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.42MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.29MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.61MB/s(Youtube:不良林)
+      - 🇭🇰 香港-496.0KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-408.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-425.8KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.14MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.39MB/s(Youtube:不良林)
+      - 🇭🇰 香港-710.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.98MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-350.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-345.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-386.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.09MB/s(Youtube:不良林)
-      - 🇭🇰 香港-709.7KB/s(Youtube:不良林)
-      - 匈牙利-1.96MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.27MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.42MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.29MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.61MB/s(Youtube:不良林)
+      - 🇭🇰 香港-496.0KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-408.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-425.8KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.14MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.39MB/s(Youtube:不良林)
+      - 🇭🇰 香港-710.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.98MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-709.7KB/s(Youtube:不良林)
+      - 🇭🇰 香港-496.0KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.14MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.39MB/s(Youtube:不良林)
+      - 🇭🇰 香港-710.7KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-350.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-345.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-386.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.09MB/s(Youtube:不良林)
-      - 🇭🇰 香港-709.7KB/s(Youtube:不良林)
-      - 匈牙利-1.96MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.27MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.42MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.29MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.61MB/s(Youtube:不良林)
+      - 🇭🇰 香港-496.0KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-408.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-425.8KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.14MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.39MB/s(Youtube:不良林)
+      - 🇭🇰 香港-710.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.98MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-350.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-345.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-386.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.09MB/s(Youtube:不良林)
-      - 🇭🇰 香港-709.7KB/s(Youtube:不良林)
-      - 匈牙利-1.96MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.27MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.42MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.29MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.61MB/s(Youtube:不良林)
+      - 🇭🇰 香港-496.0KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-408.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-425.8KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.14MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.39MB/s(Youtube:不良林)
+      - 🇭🇰 香港-710.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.98MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-350.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-345.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-386.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.09MB/s(Youtube:不良林)
-      - 🇭🇰 香港-709.7KB/s(Youtube:不良林)
-      - 匈牙利-1.96MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.27MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.42MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.29MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.61MB/s(Youtube:不良林)
+      - 🇭🇰 香港-496.0KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-408.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-425.8KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.14MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.39MB/s(Youtube:不良林)
+      - 🇭🇰 香港-710.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.98MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +132,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-350.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-345.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-386.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.09MB/s(Youtube:不良林)
-      - 🇭🇰 香港-709.7KB/s(Youtube:不良林)
-      - 匈牙利-1.96MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.27MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.42MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.29MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.61MB/s(Youtube:不良林)
+      - 🇭🇰 香港-496.0KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-408.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-425.8KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.14MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.39MB/s(Youtube:不良林)
+      - 🇭🇰 香港-710.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.98MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
