--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,118 +5,116 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-8.42MB/s(Youtube:不良林), server: cmb.3sx.xyz, port: 21005, type: ss, cipher: chacha20-ietf-poly1305, password: d80412a5-1757-48a5-b493-e2de1265cc11}
-  - {name: 🇸🇬 新加坡-3.61MB/s(Youtube:不良林), server: 13.250.126.43, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
-  - {name: 🇭🇰 香港-496.0KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 6004, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇩🇪 德国-1.04MB/s(Youtube:不良林), server: 165.22.73.126, port: 23335, type: ss, cipher: aes-256-cfb, password: 7d99ae502227454ea998d71e4b62a388}
+  - {name: 🇺🇸 美国-413.7KB/s(Youtube:不良林), server: au2-2.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-2.nigirocloud.com, skip-cert-verify: true}
+  - {name: 匈牙利-1.86MB/s(Youtube:不良林), server: 185.225.69.134, port: 45081, type: vmess, uuid: 3c3bfd75-dc30-4e76-8940-47e1137e21f9, alterId: 64, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-410.3KB/s(Youtube:不良林), server: AZHJ001.xiba1.xyz, port: 20724, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZHJ001.xiba1.xyz, skip-cert-verify: true}
   - {name: 🇺🇸 美国-408.0KB/s(Youtube:不良林), server: au2-4.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-4.nigirocloud.com, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-425.8KB/s(Youtube:不良林), server: 212.81.47.16, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇨🇳 台湾-2.14MB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1c08f35bdafe74a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
-  - {name: 🇨🇳 台湾-1.39MB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
-  - {name: 🇭🇰 香港-710.7KB/s(Youtube:不良林), server: zq-vip-05.com, port: 443, type: trojan, password: 7TFhMMPRFjkEe9Bl, sni: zq-vip-05.com, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.98MB/s(Youtube:不良林), server: vus2.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vus2.0bad.com}}
+  - {name: 🇫🇷 法国-2.36MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇺🇸 美国-4.24MB/s(Youtube:不良林), server: 212.81.47.12, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-1.10MB/s(Youtube:不良林), server: AZHJ001.xiba1.xyz, port: 20722, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZHJ001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.25MB/s(Youtube:不良林), server: 212.81.47.14, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.22MB/s(Youtube:不良林), server: sg.guiqing.ml, port: 43956, type: vmess, uuid: 91df6837-896d-45bc-ec6f-0fe4b792b369, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.58MB/s(Youtube:不良林), server: 167.88.61.2, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-8.42MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.61MB/s(Youtube:不良林)
-      - 🇭🇰 香港-496.0KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-413.7KB/s(Youtube:不良林)
+      - 匈牙利-1.86MB/s(Youtube:不良林)
+      - 🇭🇰 香港-410.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-408.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-425.8KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.14MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.39MB/s(Youtube:不良林)
-      - 🇭🇰 香港-710.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.98MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.24MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.58MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-8.42MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.61MB/s(Youtube:不良林)
-      - 🇭🇰 香港-496.0KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-413.7KB/s(Youtube:不良林)
+      - 匈牙利-1.86MB/s(Youtube:不良林)
+      - 🇭🇰 香港-410.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-408.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-425.8KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.14MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.39MB/s(Youtube:不良林)
-      - 🇭🇰 香港-710.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.98MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.24MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.58MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-8.42MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.61MB/s(Youtube:不良林)
-      - 🇭🇰 香港-496.0KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-413.7KB/s(Youtube:不良林)
+      - 匈牙利-1.86MB/s(Youtube:不良林)
+      - 🇭🇰 香港-410.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-408.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-425.8KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.14MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.39MB/s(Youtube:不良林)
-      - 🇭🇰 香港-710.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.98MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.24MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.58MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-496.0KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.14MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.39MB/s(Youtube:不良林)
-      - 🇭🇰 香港-710.7KB/s(Youtube:不良林)
+      - 🇭🇰 香港-410.3KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.10MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-8.42MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.61MB/s(Youtube:不良林)
-      - 🇭🇰 香港-496.0KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-413.7KB/s(Youtube:不良林)
+      - 匈牙利-1.86MB/s(Youtube:不良林)
+      - 🇭🇰 香港-410.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-408.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-425.8KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.14MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.39MB/s(Youtube:不良林)
-      - 🇭🇰 香港-710.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.98MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.24MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.58MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-8.42MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.61MB/s(Youtube:不良林)
-      - 🇭🇰 香港-496.0KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-413.7KB/s(Youtube:不良林)
+      - 匈牙利-1.86MB/s(Youtube:不良林)
+      - 🇭🇰 香港-410.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-408.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-425.8KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.14MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.39MB/s(Youtube:不良林)
-      - 🇭🇰 香港-710.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.98MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.24MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.58MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-8.42MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.61MB/s(Youtube:不良林)
-      - 🇭🇰 香港-496.0KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-413.7KB/s(Youtube:不良林)
+      - 匈牙利-1.86MB/s(Youtube:不良林)
+      - 🇭🇰 香港-410.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-408.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-425.8KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.14MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.39MB/s(Youtube:不良林)
-      - 🇭🇰 香港-710.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.98MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.24MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.58MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -132,16 +130,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-8.42MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.61MB/s(Youtube:不良林)
-      - 🇭🇰 香港-496.0KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-413.7KB/s(Youtube:不良林)
+      - 匈牙利-1.86MB/s(Youtube:不良林)
+      - 🇭🇰 香港-410.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-408.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-425.8KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.14MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.39MB/s(Youtube:不良林)
-      - 🇭🇰 香港-710.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.98MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.24MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.58MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
