--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,116 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-413.7KB/s(Youtube:不良林), server: au2-2.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-2.nigirocloud.com, skip-cert-verify: true}
-  - {name: 匈牙利-1.86MB/s(Youtube:不良林), server: 185.225.69.134, port: 45081, type: vmess, uuid: 3c3bfd75-dc30-4e76-8940-47e1137e21f9, alterId: 64, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-410.3KB/s(Youtube:不良林), server: AZHJ001.xiba1.xyz, port: 20724, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZHJ001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-408.0KB/s(Youtube:不良林), server: au2-4.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-4.nigirocloud.com, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-2.36MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇺🇸 美国-4.24MB/s(Youtube:不良林), server: 212.81.47.12, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-1.10MB/s(Youtube:不良林), server: AZHJ001.xiba1.xyz, port: 20722, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZHJ001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.25MB/s(Youtube:不良林), server: 212.81.47.14, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.22MB/s(Youtube:不良林), server: sg.guiqing.ml, port: 43956, type: vmess, uuid: 91df6837-896d-45bc-ec6f-0fe4b792b369, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.58MB/s(Youtube:不良林), server: 167.88.61.2, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-935.4KB/s(Youtube:不良林), server: 5.188.0.226, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-1.11MB/s(Youtube:不良林), server: AZQT001.xiba1.xyz, port: 20732, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZQT001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.83MB/s(Youtube:不良林), server: 167.88.61.2, port: 807, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-8.22MB/s(Youtube:不良林), server: transit1.fanqiang.eu, port: 15004, type: trojan, password: 7259391b-9f01-4ede-90dc-3955cf1c4998, sni: transit1.fanqiang.eu, skip-cert-verify: true}
+  - {name: 匈牙利-2.92MB/s(Youtube:不良林), server: 185.225.69.134, port: 45081, type: vmess, uuid: 3c3bfd75-dc30-4e76-8940-47e1137e21f9, alterId: 64, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-15.77MB/s(Youtube:不良林), server: transit1.fanqiang.eu, port: 15021, type: trojan, password: 7259391b-9f01-4ede-90dc-3955cf1c4998, sni: transit1.fanqiang.eu, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.10MB/s(Youtube:不良林), server: AZQT001.xiba1.xyz, port: 20733, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZQT001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-669.3KB/s(Youtube:不良林), server: AZQT001.xiba1.xyz, port: 20734, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZQT001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.93MB/s(Youtube:不良林), server: transit1.fanqiang.eu, port: 15009, type: trojan, password: 7259391b-9f01-4ede-90dc-3955cf1c4998, sni: transit1.fanqiang.eu, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-9.57MB/s(Youtube:不良林), server: transit1.fanqiang.eu, port: 15020, type: trojan, password: 7259391b-9f01-4ede-90dc-3955cf1c4998, sni: transit1.fanqiang.eu, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-413.7KB/s(Youtube:不良林)
-      - 匈牙利-1.86MB/s(Youtube:不良林)
-      - 🇭🇰 香港-410.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-408.0KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.36MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.24MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-935.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-8.22MB/s(Youtube:不良林)
+      - 匈牙利-2.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-15.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-669.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-9.57MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-413.7KB/s(Youtube:不良林)
-      - 匈牙利-1.86MB/s(Youtube:不良林)
-      - 🇭🇰 香港-410.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-408.0KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.36MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.24MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-935.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-8.22MB/s(Youtube:不良林)
+      - 匈牙利-2.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-15.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-669.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-9.57MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-413.7KB/s(Youtube:不良林)
-      - 匈牙利-1.86MB/s(Youtube:不良林)
-      - 🇭🇰 香港-410.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-408.0KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.36MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.24MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-935.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-8.22MB/s(Youtube:不良林)
+      - 匈牙利-2.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-15.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-669.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-9.57MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-410.3KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.10MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-413.7KB/s(Youtube:不良林)
-      - 匈牙利-1.86MB/s(Youtube:不良林)
-      - 🇭🇰 香港-410.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-408.0KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.36MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.24MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-935.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-8.22MB/s(Youtube:不良林)
+      - 匈牙利-2.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-15.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-669.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-9.57MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-413.7KB/s(Youtube:不良林)
-      - 匈牙利-1.86MB/s(Youtube:不良林)
-      - 🇭🇰 香港-410.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-408.0KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.36MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.24MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-935.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-8.22MB/s(Youtube:不良林)
+      - 匈牙利-2.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-15.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-669.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-9.57MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-413.7KB/s(Youtube:不良林)
-      - 匈牙利-1.86MB/s(Youtube:不良林)
-      - 🇭🇰 香港-410.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-408.0KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.36MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.24MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-935.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-8.22MB/s(Youtube:不良林)
+      - 匈牙利-2.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-15.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-669.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-9.57MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -130,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-413.7KB/s(Youtube:不良林)
-      - 匈牙利-1.86MB/s(Youtube:不良林)
-      - 🇭🇰 香港-410.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-408.0KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.36MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.24MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-935.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-8.22MB/s(Youtube:不良林)
+      - 匈牙利-2.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-15.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-669.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-9.57MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
