--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,15 +5,15 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-5.78MB/s(Youtube:不良林), server: transit1.fanqiang.eu, port: 15045, type: trojan, password: 7259391b-9f01-4ede-90dc-3955cf1c4998, sni: transit1.fanqiang.eu, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-10.51MB/s(Youtube:不良林), server: cmb.3sx.xyz, port: 21003, type: ss, cipher: chacha20-ietf-poly1305, password: d80412a5-1757-48a5-b493-e2de1265cc11}
-  - {name: 🇺🇸 美国-1.79MB/s(Youtube:不良林), server: 5.188.0.226, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-4.78MB/s(Youtube:不良林), server: transit1.fanqiang.eu, port: 15008, type: trojan, password: 7259391b-9f01-4ede-90dc-3955cf1c4998, sni: transit1.fanqiang.eu, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-1.07MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20711, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-21.38MB/s(Youtube:不良林), server: transit1.fanqiang.eu, port: 15021, type: trojan, password: 7259391b-9f01-4ede-90dc-3955cf1c4998, sni: transit1.fanqiang.eu, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-1.04MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 6003, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-431.3KB/s(Youtube:不良林), server: AZHJ001.xiba1.xyz, port: 20722, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZHJ001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-218.1KB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-761.7KB/s(Youtube:不良林), server: AZQT001.xiba1.xyz, port: 20746, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZQT001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-421.5KB/s(Youtube:不良林), server: AZQT001.xiba1.xyz, port: 20732, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZQT001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.28MB/s(Youtube:不良林), server: transit1.fanqiang.eu, port: 15021, type: trojan, password: 7259391b-9f01-4ede-90dc-3955cf1c4998, sni: transit1.fanqiang.eu, skip-cert-verify: true}
   - {name: 🇺🇸 美国-221.0KB/s(Youtube:不良林), server: AZQT001.xiba1.xyz, port: 20733, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZQT001.xiba1.xyz, skip-cert-verify: true}
   - {name: 🇺🇸 美国-237.7KB/s(Youtube:不良林), server: AZQT001.xiba1.xyz, port: 20734, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZQT001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.81MB/s(Youtube:不良林), server: transit1.fanqiang.eu, port: 15009, type: trojan, password: 7259391b-9f01-4ede-90dc-3955cf1c4998, sni: transit1.fanqiang.eu, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-796.3KB/s(Youtube:不良林), server: transit1.fanqiang.eu, port: 15009, type: trojan, password: 7259391b-9f01-4ede-90dc-3955cf1c4998, sni: transit1.fanqiang.eu, skip-cert-verify: true}
   - {name: 🇺🇸 美国-9.57MB/s(Youtube:不良林), server: transit1.fanqiang.eu, port: 15020, type: trojan, password: 7259391b-9f01-4ede-90dc-3955cf1c4998, sni: transit1.fanqiang.eu, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
@@ -21,30 +21,30 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-5.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.79MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.78MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-21.38MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.04MB/s(Youtube:不良林)
+      - 🇭🇰 香港-431.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-218.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-761.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-421.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
       - 🇺🇸 美国-221.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-237.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-796.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-9.57MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-5.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.79MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.78MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-21.38MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.04MB/s(Youtube:不良林)
+      - 🇭🇰 香港-431.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-218.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-761.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-421.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
       - 🇺🇸 美国-221.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-237.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-796.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-9.57MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
@@ -52,51 +52,52 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-5.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.79MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.78MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-21.38MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.04MB/s(Youtube:不良林)
+      - 🇭🇰 香港-431.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-218.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-761.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-421.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
       - 🇺🇸 美国-221.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-237.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-796.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-9.57MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-1.07MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.04MB/s(Youtube:不良林)
+      - 🇭🇰 香港-431.3KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-5.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.79MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.78MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-21.38MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.04MB/s(Youtube:不良林)
+      - 🇭🇰 香港-431.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-218.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-761.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-421.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
       - 🇺🇸 美国-221.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-237.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-796.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-9.57MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-5.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.79MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.78MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-21.38MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.04MB/s(Youtube:不良林)
+      - 🇭🇰 香港-431.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-218.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-761.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-421.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
       - 🇺🇸 美国-221.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-237.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-796.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-9.57MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
@@ -104,15 +105,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-5.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.79MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.78MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-21.38MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.04MB/s(Youtube:不良林)
+      - 🇭🇰 香港-431.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-218.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-761.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-421.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
       - 🇺🇸 美国-221.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-237.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-796.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-9.57MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
@@ -129,15 +130,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-5.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.79MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.78MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-21.38MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.04MB/s(Youtube:不良林)
+      - 🇭🇰 香港-431.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-218.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-761.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-421.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
       - 🇺🇸 美国-221.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-237.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-796.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-9.57MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
